modified:   az-infra-create.yml

--- a/az-infra-create.yml
+++ b/az-infra-create.yml
@@ -2,8 +2,6 @@
 - name: Azure - Create infrastructure
   hosts: target_hosts
 
-#  vars:
-
   tasks:
 
 # For our demo we already have a Resource Group
@@ -40,6 +38,7 @@
               - 443 # HTTPS
               - 5986 # WinRM
               - 3389 # RDP
+              - 27199 #Ansible default receptor port
             access: Allow
             priority: 1001
             direction: Inbound
