modified:   .gitignore 	modified:   ansible-navigator.yml 	modified:   az-infra-create.yml 	modified:   vars.yml

--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -2,6 +2,13 @@ ansible-navigator:
   execution-environment:
     pull:
       policy: missing
+    environment-variables:
+      pass:
+        - AZURE_SUBSCRIPTION_ID
+        - AZURE_CLIENT_ID
+        - AZURE_SECRET
+        - AZURE_TENANT
+
   playbook-artifact:
     enable: false
   mode: stdout
