Added documentation and minor improvements

--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -2,6 +2,7 @@ ansible-navigator:
   execution-environment:
     pull:
       policy: missing
+    image: quay.io/redhat_emp1/ee-ansible-ssa:latest
     environment-variables:
       pass:
         - AZURE_SUBSCRIPTION_ID
