--- a/az-vm-create.yml
+++ b/az-vm-create.yml
@@ -15,7 +15,7 @@
     #- debug:
     #    var: wadibi.vmimages
 
-    - name: Azure - Create nic for virtual machine
+    - name: Create NIC for Virtual Machine
       loop: "{{ my_azure_vms }}"
       azure.azcollection.azure_rm_networkinterface:
         resource_group: "{{ my_azure_resource_group }}"
@@ -25,7 +25,7 @@
         subnet: "{{ my_azure_subnet }}"
         security_group: "{{ my_azure_security_group }}"
         
-    - name: Azure - Create VM
+    - name: Create VM
       loop: "{{ my_azure_vms }}"
       azure.azcollection.azure_rm_virtualmachine:
         resource_group: "{{ my_azure_resource_group }}"
